# safety_pretraining

./: .gitignore  README.md  abliterate.py  evaluate.py  index.html  model_comparison_20250828_150255_openai_summary.csv  model_comparison_20250828_150255_with_openai_HuggingFaceTB_SmolLM2-1.7B-Instruct_summary.csv  plotting.ipynb  pyproject.toml  slurm.sh  slurm_short.sh
important_csv_files/: model_comparison_10q_with_llm_and_humans_summary_corrected.csv  model_comparison_10q_with_llm_and_humans_summary_corrected_renamed.csv  model_comparison_20250828_150255_with_openai_all_summary.csv  model_comparison_all_summary_renamed.csv  user2_user_study_sampled_corrected_20250831_145952_with_user_20250831_215055.csv  user_study_sampled_20250831_143859 (1).csv  user_study_sampled_corrected_20250831_145952_with_user_20250831_174445.csv
old_csv_files/: model_comparison_20250828_150255_with_openai_all_summary.csv  model_comparison_20250828_150255_with_openai_with_first_6_with_glm4_locuslab_mix_ift_v9-smollm2-1.7b-score0_rephrase123_mild_ref45_metadata_5p-600B-metamix3p-1k-0_summary.csv  model_summary_20250828_150255.csv
src/: abliterate.py  evaluate.py  evaluate_hf.py  evaluate_hf_all_judges.py  evaluate_hf_corrected_classification.py  evaluate_hf_corrected_classifier_all_judges.py  evaluate_openai.py  extract_summary.py  interactive_evaluation.py  split_data.py
src/utils/: apply.py  arguments.py  visualize.py
