[project]
name = "abliterate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "jax>=0.7.0",
    "jaxtyping>=0.3.2",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "triton>=3.3.1",
    "tyro>=0.9.26",
]

[tool.basedpyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".venv"]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "E"]
ignore = ["F722"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pudb>=2025.1",
]
